# djagno_project_template

./: .pre-commit-config.yaml  pyproject.toml
config/: settings.py
config/django/: database.py  installed_apps.py  middlware.py
readme/: POETRY.md
routes/: urls.py
